--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "node-vlive-downloader",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "A Promise-based video and meta info VLive downloader",
   "main": "index.js",
   "scripts": {
-    "test": "node test/basic_test.js"
+    "test": "node test/basic_test.js",
+    "test-download": "node test/advanced.js"
   },
   "repository": {
     "type": "git",
